Fix width of hero unit on tablet

--- a/app/assets/stylesheets/components/hero.scss
+++ b/app/assets/stylesheets/components/hero.scss
@@ -20,7 +20,7 @@
   display: flex;
 
   @media (max-width: $tablet){
-    width: 100%;
+    width: 90%;
     flex-direction: column;
     justify-content: center;
   }
